# quote-server

./: .gitmodules  CMakeLists.txt  Dockerfile  README.md  client.cpp  docker-compose.yml  main.cpp  server.cpp  zmq_test_pub.cpp  zmq_test_sub.cpp
docs/: ClientMessagingFormat.md  QsServerArchitecture.md  TradeDataMessagingFormat.md  client_messaging.md  markdown.md  trade_data_messaging.md
documentation/: FeedClient.pu  FeedClientClass.pu  MarketClass.pu  ProductChangeReceived.pu  markdown.md  receive_message_sequence_diagram.pu  subscribe_client.pu
include/: Client.hpp  ClientRegister.hpp  ClientServer.hpp  ClientService.hpp  CoinBaseMessageHandler.hpp  CoinbaseTransport.hpp  FeedClient.hpp  MarkedChangeListener.hpp  Market.hpp  MarketChange.hpp  MessageHandler.hpp  MessageReceiver.hpp  Order.hpp  OrderBook.hpp  OrderBookPublisher.hpp  OrderBookPublisherFactory.hpp  OrderBookPublisherFactoryZMQ.hpp  OrderBookPublisherZMQ.hpp  OrderBookStorage.hpp  OrderBookView.hpp  Product.hpp  ProductChange.hpp  ProductChangeChange.hpp  ProductChangeDone.hpp  ProductChangeListener.hpp  ProductChangeMatch.hpp  ProductChangeOpen.hpp  ProductChangePublisher.hpp  ProductChangePublisherFactory.hpp  ProductChangePublisherZMQ.hpp  ProductChangeResetOrderBook.hpp  ProductChangeResetOrderbook.hpp  ProductIdConnectionTable.hpp  ResetProductOrderbookChange.hpp  RestTransport.hpp  Side.hpp  Trade.hpp  TradeActivate.hpp  TradeChange.hpp  TradeDone.hpp  (+5 more)
include/coinbase/: CoinbaseFeedClient.hpp  CoinbaseFeedListener.hpp  CoinbaseFeedMessageHandler.hpp  CoinbaseFeedProduct.hpp  MessageToTrade.hpp
include/product/: Product.hpp  ProductChange.hpp  ProductChangeActivate.hpp  ProductChangeChange.hpp  ProductChangeDone.hpp  ProductChangeListener.hpp  ProductChangeMatch.hpp  ProductChangeOpen.hpp  ProductChangePublisher.hpp  ProductChangePublisherFactory.hpp  ProductChangePublisherFactoryZMQ.hpp  ProductChangePublisherZMQ.hpp  ProductChangeResetOrderBook.hpp  ProductChangeResults.hpp  ProductIdConnectionTable.hpp  ProductSubscriber.hpp
include/trade/: Trade.hpp  TradeActivate.hpp  TradeChange.hpp  TradeDone.hpp  TradeMatch.hpp  TradeOpen.hpp  TradeReceive.hpp
include/utils/: FloatingP.hpp  uuid.hpp
protos/: CMakeLists.txt
protos/qs_protos/: Message.proto
src/: ClientService.cpp  Market.cpp  Order.cpp  OrderBook.cpp
src/coinbase/: CoinbaseFeedClient.cpp  CoinbaseFeedListener.cpp  CoinbaseFeedMessageHandler.cpp  CoinbaseFeedProduct.cpp  MessageToTrade.cpp
src/product/: ProductIdConnectionTable.cpp
src/utils/: uuid.cpp
test/: CMakeLists.txt  CoinbaseFeedTest.cpp  FeedClientSpy.hpp  GenerateTestData.hpp  MarketComponentTest.cpp  OrderBookPublisherFactoryMock.hpp  OrderBookPublisherSpy.hpp  ProductChangePublisherFactoryMock.hpp  ProductChangePublisherSpy.hpp  PublisherPerformanceTest.cpp  RealCoinbaseFeedTest.cpp  test_qos_server_component.cpp
test/transport/: RestTransport.hpp  WebsocketTransport.hpp
test/transport/include/: CoinbaseEndpointService.hpp  RestTransport.hpp  WebsocketTransport.hpp  ZMQPublisher.hpp
test/transport/src/: RestTransport.cpp  WebsocketTransport.cpp
transport/include/: CoinbaseEndpointService.hpp  RestTransport.hpp  WebsocketTransport.hpp  ZMQPublisher.hpp
transport/src/: RestTransport.cpp  WebsocketTransport.cpp
zmq_test/: CMakeLists.txt
